--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,8 @@
 ---
+import '@fontsource-variable/golos-text';
+import '../styles/reset.css';
+import '../styles/global.css';
+
 interface Props {
 	title: string;
 }
@@ -26,11 +30,3 @@ const { title } = Astro.props;
 		<slot />
 	</body>
 </html>
-<style is:global>
-	:root {
-
-	}
-	html {
-
-	}
-</style>
