🛠 fix incorrect link in disciplines

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import DisciplineBlock from "../components/DisciplineBlock.astro";
 													 color="#555555"
 					/>
 					<DisciplineBlock heading="Вычислительная математика" link="/comp-maths/theory" icon="abacus" />
-					<DisciplineBlock heading="Английский язык" link="/avmis/theory" icon="tickets" />
+					<DisciplineBlock heading="Английский язык" link="/english/theory" icon="tickets" />
 					<DisciplineBlock heading="Информационно-технологическая инфраструктура" link="/infrastructure/theory" icon="flipchart" />
 					<DisciplineBlock heading="Математический анализ" link="/calculus/theory" icon="chart-up" />
 					<DisciplineBlock heading="Предметно-ориентированные информационные системы" link="/pois/theory" icon="warehouse" />
