🛠 change margin to padding for future reasons

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import DisciplineBlock from "../components/DisciplineBlock.astro";
 
 <style>
 	main {
-		margin: 64px 96px;
+		padding: 64px 96px;
 	}
 
 	.content {
