🎨 add theory layout + basic text styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,11 +17,7 @@ import DisciplineBlock from "../components/DisciplineBlock.astro";
 				<h2>Дисциплины</h2>
 
 				<div class="disciplines">
-					<DisciplineBlock heading="Архитектура вычислительных машин и систем"
-													 link="/avmis/theory"
-													 icon="robotic-arm"
-													 color="#555555"
-					/>
+					<DisciplineBlock heading="Архитектура вычислительных машин и систем" link="/avmis/theory" icon="robotic-arm" />
 					<DisciplineBlock heading="Вычислительная математика" link="/comp-maths/theory" icon="abacus" />
 					<DisciplineBlock heading="Английский язык" link="/english/theory" icon="tickets" />
 					<DisciplineBlock heading="Информационно-технологическая инфраструктура" link="/infrastructure/theory" icon="flipchart" />
