🎨 text styling (code blocks, tables and mathml)

--- a/src/layouts/TheoryLayout.astro
+++ b/src/layouts/TheoryLayout.astro
@@ -1,6 +1,7 @@
 ---
 import { Icon } from 'astro-icon';
 import '@fontsource-variable/golos-text';
+import '@fontsource/jetbrains-mono';
 import '../styles/reset.css';
 import '../styles/global.css';
 import '../styles/text.css';
