--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import DisciplineBlock from "../components/DisciplineBlock.astro";
 			<div class="intro-text">
 				<Icon name="snowflake" class="snowflake-icon" />
 				<h1>Это конспект к зимней сессии 2023—2024.</h1>
-				<p>Подходит группам ИВБО-06-22, ИВБО-07-22 и ИВБО-08-22.</p>
+				<p>Собран для групп ИВБО-06-22, ИВБО-07-22 и ИВБО-08-22.</p>
 			</div>
 
 			<div class="disciplines-block">
