--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,7 @@
-:root {
-
-}
-
 html {
   font-family: 'Golos Text Variable', sans-serif;
 }
 
-body {
-
+code {
+  font-family: 'JetBrains Mono', monospace;
 }
