--- a/src/layouts/TheoryLayout.astro
+++ b/src/layouts/TheoryLayout.astro
@@ -29,7 +29,7 @@ const { frontmatter } = Astro.props;
   <main>
     <div class="content">
       <div class="intro">
-        <a href="/" class="back-link">← На главную</a>
+        <a href="/mirea-exams" class="back-link">← На главную</a>
         <Icon name={frontmatter.icon} class="icon" />
         <h1>{frontmatter.title}</h1>
         <p class="subheader">{frontmatter.subheader}</p>
