--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,17 +17,17 @@ import DisciplineBlock from "../components/DisciplineBlock.astro";
 				<h2>Дисциплины</h2>
 
 				<div class="disciplines">
-					<DisciplineBlock heading="Архитектура вычислительных машин и систем" link="/avmis/theory" icon="robotic-arm" />
-					<DisciplineBlock heading="Вычислительная математика" link="/comp-maths/theory" icon="abacus" />
-					<DisciplineBlock heading="Английский язык" link="/english/theory" icon="tickets" />
-					<DisciplineBlock heading="Информационно-технологическая инфраструктура" link="/infrastructure/theory" icon="flipchart" />
-					<DisciplineBlock heading="Математический анализ" link="/calculus/theory" icon="chart-up" />
-					<DisciplineBlock heading="Предметно-ориентированные информационные системы" link="/pois/theory" icon="warehouse" />
-					<DisciplineBlock heading="Программирование на языке Джава" link="/java/theory" icon="programming" />
-					<DisciplineBlock heading="Физическая культура и спорт" link="/sports/theory" icon="weightlifter" />
-					<DisciplineBlock heading="Философия" link="/philosophy/theory" icon="lincoln" />
-					<DisciplineBlock heading="Экономическая культура" link="/economics/theory" icon="wallet" />
-					<DisciplineBlock heading="Электротехника" link="/electro/theory" icon="lightning-rod" />
+					<DisciplineBlock heading="Архитектура вычислительных машин и систем" link="/mirea-exams/avmis/theory" icon="robotic-arm" />
+					<DisciplineBlock heading="Вычислительная математика" link="/mirea-exams/comp-maths/theory" icon="abacus" />
+					<DisciplineBlock heading="Английский язык" link="/mirea-exams/english/theory" icon="tickets" />
+					<DisciplineBlock heading="Информационно-технологическая инфраструктура" link="/mirea-exams/infrastructure/theory" icon="flipchart" />
+					<DisciplineBlock heading="Математический анализ" link="/mirea-exams/calculus/theory" icon="chart-up" />
+					<DisciplineBlock heading="Предметно-ориентированные информационные системы" link="/mirea-exams/pois/theory" icon="warehouse" />
+					<DisciplineBlock heading="Программирование на языке Джава" link="/mirea-exams/java/theory" icon="programming" />
+					<DisciplineBlock heading="Физическая культура и спорт" link="/mirea-exams/sports/theory" icon="weightlifter" />
+					<DisciplineBlock heading="Философия" link="/mirea-exams/philosophy/theory" icon="lincoln" />
+					<DisciplineBlock heading="Экономическая культура" link="/mirea-exams/economics/theory" icon="wallet" />
+					<DisciplineBlock heading="Электротехника" link="/mirea-exams/electro/theory" icon="lightning-rod" />
 				</div>
 			</div>
 		</div>
