--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,22 +9,22 @@ import DisciplineBlock from "../components/DisciplineBlock.astro";
 		<div class="content">
 			<div class="intro-text">
 				<Icon name="snowflake" class="snowflake-icon" />
-				<h1>Это конспект к зимней сессии 2023—2024.</h1>
-				<p>Собран для групп ИВБО-06-22, ИВБО-07-22 и ИВБО-08-22.</p>
+				<h1>Это конспект к зимней сессии <nobr>2023—2024.</nobr></h1>
+				<p>Материал третьего семестра <nobr>потока <span>ИВБО</span></nobr> <nobr>кафедры <span>ППИ</span></nobr></p>
 			</div>
 
 			<div class="disciplines-block">
 				<h2>Дисциплины</h2>
 
 				<div class="disciplines">
-					<DisciplineBlock heading="Архитектура вычислительных машин и систем" link="/mirea-exams/avmis/theory" icon="robotic-arm" />
+					<DisciplineBlock heading="Архитектура вычислительных машин и систем" link="/mirea-exams/avmis/theory" icon="robotic-arm" />
 					<DisciplineBlock heading="Вычислительная математика" link="/mirea-exams/comp-maths/theory" icon="abacus" />
 					<DisciplineBlock heading="Английский язык" link="/mirea-exams/english/theory" icon="tickets" />
 					<DisciplineBlock heading="Информационно-технологическая инфраструктура" link="/mirea-exams/infrastructure/theory" icon="flipchart" />
 					<DisciplineBlock heading="Математический анализ" link="/mirea-exams/calculus/theory" icon="chart-up" />
 					<DisciplineBlock heading="Предметно-ориентированные информационные системы" link="/mirea-exams/pois/theory" icon="warehouse" />
-					<DisciplineBlock heading="Программирование на языке Джава" link="/mirea-exams/java/theory" icon="programming" />
-					<DisciplineBlock heading="Физическая культура и спорт" link="/mirea-exams/sports/theory" icon="weightlifter" />
+					<DisciplineBlock heading="Программирование на языке Джава" link="/mirea-exams/java/theory" icon="programming" />
+					<DisciplineBlock heading="Физическая культура и спорт" link="/mirea-exams/sports/theory" icon="weightlifter" />
 					<DisciplineBlock heading="Философия" link="/mirea-exams/philosophy/theory" icon="lincoln" />
 					<DisciplineBlock heading="Экономическая культура" link="/mirea-exams/economics/theory" icon="wallet" />
 					<DisciplineBlock heading="Электротехника" link="/mirea-exams/electro/theory" icon="lightning-rod" />
@@ -37,12 +37,28 @@ import DisciplineBlock from "../components/DisciplineBlock.astro";
 <style>
 	main {
 		padding: 64px 96px;
+
+		@media (max-width: 1260px) {
+			padding: 48px 64px;
+		}
+
+		@media (max-width: 900px) {
+			padding: 24px 32px;
+		}
+
+		@media (max-width: 700px) {
+			padding: 12px 16px;
+		}
 	}
 
 	.content {
 		display: flex;
 		flex-direction: column;
 		gap: 96px;
+
+		@media (max-width: 900px) {
+			gap: 48px;
+		}
 	}
 
 	.intro-text {
@@ -50,12 +66,20 @@ import DisciplineBlock from "../components/DisciplineBlock.astro";
 		display: flex;
 		flex-direction: column;
 		gap: 16px;
+
+		@media (max-width: 700px) {
+			align-items: center;
+		}
 	}
 
 	.disciplines-block {
 		display: flex;
 		flex-direction: column;
 		gap: 32px;
+
+		@media (max-width: 900px) {
+			gap: 24px;
+		}
 	}
 
 	.disciplines {
@@ -63,21 +87,72 @@ import DisciplineBlock from "../components/DisciplineBlock.astro";
 		grid-template-columns: repeat(3, 1fr);
 		grid-auto-rows: auto;
 		gap: 24px;
+
+		@media (max-width: 1260px) {
+			gap: 18px;
+		}
+
+		@media (max-width: 1080px) {
+			grid-template-columns: repeat(2, 1fr);
+		}
+
+		@media (max-width: 600px) {
+			grid-template-columns: 1fr;
+			gap: 14px;
+		}
 	}
 
 	h1 {
 		font-size: 48px;
 		font-weight: 600;
+
+		@media (max-width: 1260px) {
+			font-size: 40px;
+		}
+
+		@media (max-width: 900px) {
+			font-size: 32px;
+		}
+
+		@media (max-width: 700px) {
+			font-size: 28px;
+			text-align: center;
+		}
 	}
 
 	h2 {
 		font-size: 36px;
 		font-weight: 600;
+
+		@media (max-width: 1260px) {
+			font-size: 32px;
+		}
+
+		@media (max-width: 900px) {
+			font-size: 24px;
+		}
+
+		@media (max-width: 700px) {
+			font-size: 22px;
+		}
 	}
 
 	p {
 		font-size: 24px;
 		color: #343434;
+
+		span {
+			font-variant: small-caps;
+		}
+
+		@media (max-width: 1260px) {
+			font-size: 20px;
+		}
+
+		@media (max-width: 700px) {
+			font-size: 18px;
+			text-align: center;
+		}
 	}
 
 	.snowflake-icon {
@@ -87,5 +162,23 @@ import DisciplineBlock from "../components/DisciplineBlock.astro";
 		width: 40px;
 		height: 40px;
 		fill: url(#linear-gradient);
+
+		@media (max-width: 1260px) {
+			left: -42px;
+			top: 4px;
+			width: 32px;
+			height: 32px;
+		}
+
+		@media (max-width: 900px) {
+			left: -26px;
+			top: 6px;
+			width: 20px;
+			height: 20px;
+		}
+
+		@media (max-width: 700px) {
+			display: none;
+		}
 	}
 </style>
