🎨 theory pages mobile adaptive

--- a/src/components/DisciplineBlock.astro
+++ b/src/components/DisciplineBlock.astro
@@ -71,6 +71,7 @@ const { heading, icon, link } = Astro.props;
     height: auto;
     z-index: 2;
     mix-blend-mode: difference;
+    flex-shrink: 0;
 
     transition: 500ms;
 
