--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -162,6 +162,7 @@ import DisciplineBlock from "../components/DisciplineBlock.astro";
 		width: 40px;
 		height: 40px;
 		fill: url(#linear-gradient);
+		flex-shrink: 0;
 
 		@media (max-width: 1260px) {
 			left: -42px;
