--- a/src/layouts/TheoryLayout.astro
+++ b/src/layouts/TheoryLayout.astro
@@ -68,6 +68,10 @@ const { frontmatter } = Astro.props;
 
   .text {
     max-width: 1280px;
+
+    @media (max-width: 700px) {
+      max-width: 100%;
+    }
   }
 
   .intro {
