🎨 add about block

--- a/src/components/DisciplineBlock.astro
+++ b/src/components/DisciplineBlock.astro
@@ -72,6 +72,7 @@ const { heading, icon, link } = Astro.props;
     z-index: 2;
     mix-blend-mode: difference;
     flex-shrink: 0;
+    fill: black;
 
     transition: 500ms;
 
