--- a/src/components/DisciplineBlock.astro
+++ b/src/components/DisciplineBlock.astro
@@ -23,23 +23,16 @@ const { heading, icon, link } = Astro.props;
     position: relative;
     width: 100%;
     height: 100%;
-    min-height: 110px;
+    min-height: 156px;
     padding: 16px;
 
-    border: 1px solid black;
-    border-radius: 12px;
+    border-radius: 16px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     transition: 500ms;
 
     &:hover {
-      border: 1px solid #00c8ff;
-      color: #0096ff;
-      background: #00c8ff0a;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
       transition: none;
-
-      .icon {
-        fill: #ff8100;
-        transition: none;
-      }
     }
 
     @media (max-width: 700px) {
@@ -50,6 +43,7 @@ const { heading, icon, link } = Astro.props;
 
   h3 {
     font-size: 24px;
+    font-weight: 500;
     line-height: 38px;
 
     @media (max-width: 1410px) {
@@ -67,7 +61,7 @@ const { heading, icon, link } = Astro.props;
     position: absolute;
     bottom: 0;
     right: 8px;
-    width: 64px;
+    width: 72px;
     height: auto;
     z-index: 2;
     mix-blend-mode: difference;
