--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -1,3 +1,7 @@
+h4, h5, h6, p, li, ul, ol, i, em, strong, th, td {
+  color: var(--primary-text);
+}
+
 h4 {
   font-size: 28px;
   line-height: 40px;
